[metadata]
name = Duva
version = 0.0.5
author = Ona Systems Inc
license = Copyright (c) 2022 Ona Systems Inc All rights reserved
license_file = LICENSE
url = https://github.com/onaio/duva
classifiers =
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.9
setup_requires = setuptools_scm
packages = find:
install_requires =
    fastapi
    itsdangerous
    alembic
    httpx
    tableauhyperapi
    fastapi-cache
    pyxform
    python-dateutil
    python-multipart
    pandas
    boto3
    tableauserverclient
    tableauhyperapi
    sqlalchemy
    cryptography
    requests
    rq
    rq-scheduler
    psycopg2-binary
    redis
    pyjwt
    sentry-sdk
    starlette_exporter
    uvicorn[standard]

[options.extras_require]
dev =
    ipdb
    black
    flake8
    pre-commit
    pytest
    pytest-cov
    tox
    fakeredis
